email signature issue Fixing
1) email signature layout issues [[Fixed]]
a) horizontal scrollbar overlaps on mini card view [[Fixed]]
b) last mini card title is having blue color [[fixed]]
c) adjust badge icons properly [[fixed]]
d)  move the company log to top right corner [[Fixed]]

--- a/src/assets/css/indi.css
+++ b/src/assets/css/indi.css
@@ -317,7 +317,6 @@ body.indi-app:not(.indi-app-on-macintosh)::-webkit-scrollbar-thumb:hover,
 
 .indi-app .indi-qrcode-box-img-col {
   position: relative;
-  top: -12px;
 }
 
 .indi-app .indi-qrcode-box-img-col img {
@@ -454,6 +453,16 @@ body.indi-app:not(.indi-app-on-macintosh)::-webkit-scrollbar-thumb:hover,
   text-overflow: ellipsis;
   overflow: hidden;
 }
+.indi-app .indi-signature-item-wrapper .indi-logo-image {
+  padding: 0;
+  border: 4px solid #232862;
+  border-radius: 6px 0 0 6px;
+}
+
+.indi-app .indi-signature-item-wrapper .indi-logo-image img {
+  width: 100%;
+  background-color: #232862;
+}
 
 .indi-app .indi-body-actions {
   display: flex;
@@ -539,9 +548,9 @@ body.indi-app:not(.indi-app-on-macintosh)::-webkit-scrollbar-thumb:hover,
 
 .indi-app .indi-template-title,
 .indi-app .indi-card-title {
-  padding-bottom: 8px;
+  padding-bottom: 0px;
   line-height: 19px;
-  min-height: 24px;
+  min-height: 20px;
   max-height: 40px;
   text-align: center;
   font-size: 14px;
@@ -787,11 +796,15 @@ body.indi-app:not(.indi-app-on-macintosh)::-webkit-scrollbar-thumb:hover,
 
 .btn-group>.btn-group:not(:last-child)>.btn,
 .btn-group>.btn.dropdown-toggle-split:first-child,
-.btn-group>.btn:not(:last-child):not(.dropdown-toggle) {
+.btn-group>.btn:not(:last-child):not(.dropdown-toggle),
+.btn-group>.btn:last-child:not(.dropdown-toggle) {
   background-color: #ffffff;
   color: #234c8e;
 }
 
+/* .indi-app .indi-card-item-wrapper.indi-card-mini-item-wrapper.btn .indi-mini-card-name {
+  color: #234c8e;
+} */
 
 .indi-app .btn-check+.btn.indi-card-item-wrapper.indi-card-mini-item-wrapper.btn-outline-primary {
   background-color: transparent;
@@ -822,13 +835,21 @@ body.indi-app:not(.indi-app-on-macintosh)::-webkit-scrollbar-thumb:hover,
 
 .indi-app .btn-check:checked+.btn.indi-card-item-wrapper.indi-card-mini-item-wrapper.btn-outline-primary .indi-mini-card-name {
   font-weight: 700;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 .indi-app .indi-card-qr-code {
   width: 32px;
   height: 32px;
   float: right;
-  margin-bottom: 12px;
+  margin-bottom: 4px;
+  margin-left: 6px;
+}
+
+.indi-app .indi-info-left {
+  overflow: hidden;
 }
 
 .indi-app .indi-copy-signature-wrapper,
@@ -841,8 +862,7 @@ body.indi-app:not(.indi-app-on-macintosh)::-webkit-scrollbar-thumb:hover,
 .indi-app .indi-mini-card-list {
   margin: 0 auto;
   overflow-x: auto;
-  overflow-x: overlay;
-  min-height: 184px;
+  min-height: 200px;
   justify-content: space-between;
 }
 
@@ -882,12 +902,12 @@ body.indi-app:not(.indi-app-on-macintosh)::-webkit-scrollbar-thumb:hover,
 
 .indi-app .indi-signature-template {
   justify-content: space-between;
+  padding: 0 16px;
 }
 
 .indi-app .indi-signature-template .indi-qrcode-box-info-col div span {
   display: table-cell;
   padding-bottom: 8px;
-  padding-left: 16px;
 }
 
 .indi-app .indi-signature-template .indi-qrcode-box-info-col div span.indi-card-field-item-img {
@@ -1801,7 +1821,12 @@ body.indi-app:not(.indi-app-on-macintosh)::-webkit-scrollbar-thumb:hover,
   margin-left: 10px;
 }
 
-.indi-app .indi-mini-card-badge-icon {
-  width: 24px;
-  height: 24px;
+.indi-app .indi-mini-card-list .indi-mini-card-badge-icon {
+  width: 14px;
+  margin: 3px;
+}
+
+.indi-app .indi-signature-item-wrapper .indi-mini-card-badge-icon {
+  width: 20px;
+  margin: 4px;
 }
